...
                ]}
            >
                <Text
                    variant="labelSmall"
                    style={[styles.labelText, { color: theme.colors.onSurfaceVariant }]}
                >
                    {item.isOutgoing ? "SENT" : "RECEIVED"}
                </Text>
            </View>
            
            {item.status !== PorterStatus.COMPLETED && (
                <View
                    style={[
...
