...
          rippleColor={theme.colors.statusRipple}
        />
      )}

      {!isIdle && !showBackButton && (
        <Appbar.Action
          testID="settings-outline"
          accessibilityLabel="Settings"
          icon={({ size }) => (
            <Ionicons
              name="settings-outline"
              size={size}
              color={theme.colors.onStatus}
...
