appId: com.mc.bridger.e2e
---
- assertVisible: "Maestro"
- assertVisible: "RECEIVED"
- tapOn:
    id: "settings-outline"
- waitForAnimationToEnd
- tapOn: "Reset Security"
- tapOn: "Reset"
- assertVisible: "Setup McBridge"

- longPressOn:
    id: "mnemonic-input-0"
- waitForAnimationToEnd
- tapOn: "Paste"

- assertVisible: "Maestro"
- takeScreenshot: "maestro-clipboard-verified"
- stopApp
